--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
-	
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="app.js"></script>
+	<div class="ui purple menu">
+		<a class="ui large purple header item">Adap'taBoite</a>
+		<div class="center menu" id="slogan">
+			"Ose mes compétences, elles ne t'handicapent pas !"
+		</div>
+		<div class="right menu">
+			<a class="item">Notre équipe</a>
+			<a class="item">Partenaire</a>
+			<a class="item">Contact</a>
+		</div>
+	</div>
+	<div class="container">
+		<div class="ui two item">
+			<a class="item">
+				<i class="left aligned huge green circular handicap icon"></i>
+			</a>
+			<a class="item">
+				<i class="left aligned huge green circular handicap icon"></i>
+			</a>
+		</div>
+	</div>
+
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
