--- a/index.html
+++ b/index.html
@@ -7,25 +7,69 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="ui purple menu">
-		<a class="ui large purple header item">Adap'taBoite</a>
-		<div class="center menu" id="slogan">
-			"Ose mes compétences, elles ne t'handicapent pas !"
-		</div>
+	<div class="ui top fixed purple menu">
+		<a class="ui large purple header item" href="index.html">Adap'taBoite</a>
+		<span id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</span>
 		<div class="right menu">
-			<a class="item">Notre équipe</a>
-			<a class="item">Partenaire</a>
-			<a class="item">Contact</a>
+			<a class="item" href="service.html">Services</a>
+			<a class="item" href="equipe.html">Notre équipe</a>
+			<a class="item" href="partenaire.html">Partenaires</a>
+			<a class="item" href="contact.html">Contact</a>
 		</div>
 	</div>
-	<div class="container">
-		<div class="ui two item">
-			<a class="item">
-				<i class="left aligned huge green circular handicap icon"></i>
-			</a>
-			<a class="item">
-				<i class="left aligned huge green circular handicap icon"></i>
-			</a>
+	<div class="ui grid">
+		<div class="one centered columns row" id="video">
+			<div class="ui column">
+				<iframe width="360" height="215" src="https://www.youtube.com/embed/xZ1mOuixU4g" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="one centered colum row">
+			<div class="ui column" id="description">
+				"Solutions videos pour communiquer sur les compétences et handicaps de tous"
+			</div>
+		</div>
+		<div class="one centered column row">
+			<div class="ui column" id="demande">
+				A quel handicap souhaitez vous adapter votre entreprise ?
+			</div>
+		</div>
+		<div class="three centered columns row" id="logo">
+			<div class="ui column">
+				<a class="item circular ui icon button">
+					<i class="left aligned huge green circular wheelchair icon"></i>
+					Moteur
+				</a>
+			</div>
+			<div class="ui column" id="vide"></div>
+			<div class="ui column">
+				<a class="item circular ui icon button">
+					<i class="left aligned huge pink circular blind icon"></i>
+					Vue
+				</a>
+			</div>
+		</div>
+		<div class="three centered columns row" id="logo">
+			<div class="ui column">
+				<a class="item circular ui icon button">
+					<i class="left aligned huge circular orange assistive listening systems
+	icon"></i>		
+					Audition
+				</a>
+			</div>
+			<div class="ui column" id="vide"></div>
+			<div class="ui column">
+				<a class="item circular ui icon button">
+					<i class="left aligned huge circular blue user icon"></i>
+					Mental
+				</a>
+			</div>
+		</div>
+		<div class="one centered column row" id="footer">
+			<i class="arrow circle up icon"></i>
+			<h4> Rejoignez-nous sur</h4>
+			<i class="left aligned large facebook square icon"></i>
+			<i class="center aligned large twitter square icon"></i>
+			<i class="right aligned large youtube play icon"></i>
 		</div>
 	</div>
 
