--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Adaptaboite</title>
-	<link rel="stylesheet" href="node_modules/semantic-ui-css/semantic.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -49,9 +49,6 @@
 			<i class="right aligned large youtube play icon"></i>
 		</div>
 	</div>
-
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="app.js"></script>
 </body>
 </html>
 	</div>
