Ajout des modif css et de dossiers

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Adaptaboite</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="ui top fixed purple menu">
+	<div class="ui huge top fixed purple borderless menu">
 		<a class="ui large purple header item" href="index.html">Adap'taBoite</a>
-		<span id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</span>
+		<div class="ui small header item" id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</div>
 		<div class="right menu">
 			<a class="item" href="service.html">Services</a>
 			<a class="item" href="equipe.html">Notre équipe</a>
@@ -18,29 +18,36 @@
 		</div>
 	</div>
 	<div class="ui grid">
-		<div class="one centered columns row" id="video">
+		<div class="row" id="top"></div>
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="one colum row">
+			<div class="ui center aligned column">
+				<iframe width="460" height="315" src="https://www.youtube.com/embed/mJ9ehhUpfY4" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="row"></div>
+		<div class="one centered purple colum row" id="description">
 			<div class="ui column">
-				<iframe width="360" height="215" src="https://www.youtube.com/embed/xZ1mOuixU4g" frameborder="0" allowfullscreen></iframe>
+				<div class="ui center aligned inverted huge header">"Solutions videos pour communiquer sur les compétences et handicaps de tous"</div>
 			</div>
 		</div>
-		<div class="one centered colum row">
-			<div class="ui column" id="description">
-				"Solutions videos pour communiquer sur les compétences et handicaps de tous"
+		<div class="row"></div>
+		<div class="one column centered row">
+			<div class="ui column">
+				<div class="ui center aligned large header">A quel handicap souhaitez vous adapter votre entreprise ?</div>
 			</div>
 		</div>
-		<div class="one centered column row">
-			<div class="ui column" id="demande">
-				A quel handicap souhaitez vous adapter votre entreprise ?
-			</div>
-		</div>
-		<div class="three centered columns row" id="logo">
+		<div class="row"></div>
+		<div class="four centered columns row">
 			<div class="ui column">
 				<a class="item circular ui icon button">
 					<i class="left aligned huge green circular wheelchair icon"></i>
 					Moteur
 				</a>
 			</div>
-			<div class="ui column" id="vide"></div>
+			<div class="ui column"></div>
+			<div class="ui column"></div>
 			<div class="ui column">
 				<a class="item circular ui icon button">
 					<i class="left aligned huge pink circular blind icon"></i>
@@ -48,7 +55,8 @@
 				</a>
 			</div>
 		</div>
-		<div class="three centered columns row" id="logo">
+		<div class="row"></div>
+		<div class="four centered columns row">
 			<div class="ui column">
 				<a class="item circular ui icon button">
 					<i class="left aligned huge circular orange assistive listening systems
@@ -56,7 +64,8 @@
 					Audition
 				</a>
 			</div>
-			<div class="ui column" id="vide"></div>
+			<div class="ui column"></div>
+			<div class="ui column"></div>
 			<div class="ui column">
 				<a class="item circular ui icon button">
 					<i class="left aligned huge circular blue user icon"></i>
@@ -64,12 +73,14 @@
 				</a>
 			</div>
 		</div>
-		<div class="one centered column row" id="footer">
-			<i class="arrow circle up icon"></i>
-			<h4> Rejoignez-nous sur</h4>
-			<i class="left aligned large facebook square icon"></i>
-			<i class="center aligned large twitter square icon"></i>
-			<i class="right aligned large youtube play icon"></i>
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="one centered purple column row">
+			<a href="#top"><i class="large arrow circle up inverted icon"></i></a>
+			<div class="ui center aligned inverted medium header"> Rejoignez-nous sur</div>
+			<a href=""><i class="large left aligned large facebook square inverted icon"></i></a>
+			<a href=""><i class="large center aligned large twitter square inverted icon"></i></a>
+			<a href=""><i class="large right aligned large youtube play inverted icon"></i></a>
 		</div>
 	</div>
 </body>
