--- a/partenaire.html
+++ b/partenaire.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Adaptaboite</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="ui top fixed purple menu">
+	<div class="ui huge top fixed purple borderless menu">
 		<a class="ui large purple header item" href="index.html">Adap'taBoite</a>
-		<span id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</span>
+		<div class="ui small header item" id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</div>
 		<div class="right menu">
 			<a class="item" href="service.html">Services</a>
 			<a class="item" href="equipe.html">Notre équipe</a>
@@ -17,28 +17,32 @@
 			<a class="item" href="contact.html">Contact</a>
 		</div>
 	</div>
-	<div class="ui centered grid" id="partenaire">
-		<h1>Nos partenaires</h1>
+	<div class="ui centered grid">
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="row"></div>
 		<div class="row">
-			<img src="logo1">
+			<h2 class="ui header">Nos partenaires</h2>
 		</div>
 		<div class="row">
-			<img src="logo2">
+			<img src="img/logo1">
 		</div>
 		<div class="row">
-			<img src="logo3">
+			<img src="img/logo2">
 		</div>
 		<div class="row">
-			<img src="logo4">
+			<img src="img/logo3">
+		</div>
+		<div class="row">
+			<img src="img/logo4">
 		</div>	
-	</div>
-	<div class="ui grid">
-		<div class="one centered column row" id="footer">
-			<i class="arrow circle up icon"></i>
-			<h4> Rejoignez-nous sur</h4>
-			<i class="left aligned large facebook square icon"></i>
-			<i class="center aligned large twitter square icon"></i>
-			<i class="right aligned large youtube play icon"></i>
+		<div class="row"></div>
+		<div class="one centered purple column row">
+			<a href="#top"><i class="large arrow circle up inverted icon"></i></a>
+			<div class="ui center aligned inverted medium header"> Rejoignez-nous sur</div>
+			<a href=""><i class="large left aligned large facebook square inverted icon"></i></a>
+			<a href=""><i class="large center aligned large twitter square inverted icon"></i></a>
+			<a href=""><i class="large right aligned large youtube play inverted icon"></i></a>
 		</div>
 	</div>
 </body>
