--- a/service.html
+++ b/service.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Adaptaboite</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="ui top fixed purple menu">
+	<div class="ui huge top fixed purple borderless menu">
 		<a class="ui large purple header item" href="index.html">Adap'taBoite</a>
-		<span id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</span>
+		<div class="ui small header item" id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</div>
 		<div class="right menu">
 			<a class="active item" href="service.html">Services</a>
 			<a class="item" href="equipe.html">Notre équipe</a>
@@ -18,15 +18,16 @@
 		</div>
 	</div>
 	<div class="ui grid">
+		<div class="row"></div>
 		<div class="five column row" id="service">
 			<div class="column">
-				<h3>Expertise externe</h3>
+				<h3 class="ui grey header">Expertise externe</h3>
 			</div>
 			<div class="column">
 				<i class="chevron right icon"></i>
 			</div>
 			<div class="column">
-				<h2>Contenu</h2>
+				<h2 class="ui header">Contenu</h2>
 				<div class="ui list">
 					<div class="item">Vidéos</div>
 					<div class="item">Evennements</div>
@@ -38,17 +39,18 @@
 				<i class="chevron left icon"></i>
 			</div>
 			<div class="column">
-				<h3>Plateforme partenaires</h3>
+				<h3 class="ui grey header">Plateforme partenaires</h3>
 			</div>
 		</div>
-		<div class="one centered column row" id="footer">
-			<i class="arrow circle up icon"></i>
-			<h4> Rejoignez-nous sur</h4>
-			<i class="left aligned large facebook square icon"></i>
-			<i class="center aligned large twitter square icon"></i>
-			<i class="right aligned large youtube play icon"></i>
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="one centered purple column row">
+			<a href="#top"><i class="large arrow circle up inverted icon"></i></a>
+			<div class="ui center aligned inverted medium header"> Rejoignez-nous sur</div>
+			<a href=""><i class="large left aligned large facebook square inverted icon"></i></a>
+			<a href=""><i class="large center aligned large twitter square inverted icon"></i></a>
+			<a href=""><i class="large right aligned large youtube play inverted icon"></i></a>
 		</div>
 	</div>
 </body>
 </html>
-	</div>
