Ajout du logo image et changement de video

--- a/service.html
+++ b/service.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<div class="ui huge top fixed purple borderless menu">
-		<a class="ui large purple header item" href="index.html">Adap'taBoite</a>
+		<a class="item" href="index.html">
+			<img id="logo" src="img/logo.png">
+		</a>
 		<div class="ui small header item" id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</div>
 		<div class="right menu">
 			<a class="active item" href="service.html">Services</a>
