--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<div class="ui huge top fixed purple borderless menu">
-		<a class="ui large purple header item" href="index.html">Adap'taBoite</a>
+		<a class="item" href="index.html">
+			<img id="logo" src="img/logo.png">
+		</a>
 		<div class="ui small header item" id="slogan">"Ose mes compétences, elles ne t'handicapent pas !"</div>
 		<div class="right menu">
 			<a class="item" href="service.html">Services</a>
@@ -23,9 +25,10 @@
 		<div class="row"></div>
 		<div class="one colum row">
 			<div class="ui center aligned column">
-				<iframe width="460" height="315" src="https://www.youtube.com/embed/mJ9ehhUpfY4" frameborder="0" allowfullscreen></iframe>
+				<iframe width="460" height="315" src="https://www.youtube.com/embed/BB6oKRbRbZs" frameborder="0" allowfullscreen></iframe>
 			</div>
 		</div>
+		<div class="row"></div>
 		<div class="row"></div>
 		<div class="one centered purple colum row" id="description">
 			<div class="ui column">
