Ajout de la description de l'équipe

--- a/equipe.html
+++ b/equipe.html
@@ -19,10 +19,63 @@
 			<a class="item" href="contact.html">Contact</a>
 		</div>
 	</div>
-	<div class="ui huge image">
-	  <img src="img/photo">
-	</div>
 	<div class="ui grid">
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="three column centered row">
+			<div class="ui column">
+				<div class="ui rounded image">
+					<img src="img/photo">
+				</div>
+			</div>
+			<div class="ui column">
+				<div class="ui list">
+					<div class="item">
+						<div class="header">Manon</div>
+						Leader du projet et Ergonome
+					</div>
+					<div class="item">
+						<div class="header">Caroline</div>
+						Assistante de service social
+					</div>
+					<div class="item">
+						<div class="header">Delphine</div>
+						Coach, Langue des signes et Animation du réseau des malentendants
+					</div>
+					<div class="item">
+						<div class="header">Jean-Philippe</div>
+						Ingénieur Son et Animation du réseau des outils de compensation pour les malentendants
+					</div>
+					<div class="item">
+						<div class="header">François</div>
+						Gestion d’entreprise et Animation du réseau des outils de compensation pour les malvoyants
+					</div>
+					<div class="item">
+						<div class="header">Stephan</div>
+						Aidant et Intervenant en entreprise
+					</div>
+					<div class="item">
+						<div class="header">Philippe</div>
+						Conception et Développement
+					</div>
+					<div class="item">
+						<div class="header">Zélia</div>
+						Développement de la plateforme
+					</div>
+					<div class="item">
+						<div class="header">Sami</div>
+						Administration de la plateforme
+					</div>
+					<div class="item">
+						<div class="header">Jean-Baptiste</div>
+						Animation commerciale
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row"></div>
+		<div class="row"></div>
 		<div class="one centered purple column row">
 			<a href="#top"><i class="large arrow circle up inverted icon"></i></a>
 			<div class="ui center aligned inverted medium header"> Rejoignez-nous sur</div>
