--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 	<div class="ui grid">
-		<div class="row" id="top"></div>
+		<div class="row"></div>
 		<div class="row"></div>
 		<div class="row"></div>
 		<div class="one colum row">
