Ajout des chexbox à coter de la video

--- a/equipe.html
+++ b/equipe.html
@@ -23,6 +23,7 @@
 		<div class="row"></div>
 		<div class="row"></div>
 		<div class="row"></div>
+		<div class="row"></div>
 		<div class="three column centered row">
 			<div class="ui column">
 				<div class="ui rounded image">
@@ -74,6 +75,8 @@
 				</div>
 			</div>
 		</div>
+		<div class="row"></div>
+		<div class="row"></div>
 		<div class="row"></div>
 		<div class="row"></div>
 		<div class="one centered purple column row">
