--- a/index.html
+++ b/index.html
@@ -23,9 +23,24 @@
 		<div class="row"></div>
 		<div class="row"></div>
 		<div class="row"></div>
-		<div class="one colum row">
-			<div class="ui center aligned column">
-				<iframe width="460" height="315" src="https://www.youtube.com/embed/BB6oKRbRbZs" frameborder="0" allowfullscreen></iframe>
+		<div class="four column centered row">
+			<div class="ui column"></div>
+			<iframe width="460" height="315" src="https://www.youtube.com/embed/BB6oKRbRbZs" frameborder="0" allowfullscreen></iframe>
+			<div class="ui column">
+				<div class="ui list">
+					<div class="ui checked checkbox item">
+						<input type="checkbox" checked="">
+						<label>Sous-titrage</label>
+					</div>
+					<div class="ui checked checkbox item">
+						<input type="checkbox" checked="">
+						<label>Audiodescription</label>
+					</div>
+					<div class="ui checked checkbox item">
+						<input type="checkbox" checked="">
+						<label>Langue des signes</label>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row"></div>
@@ -63,7 +78,7 @@
 			<div class="ui column">
 				<a class="item circular ui icon button">
 					<i class="left aligned huge circular orange assistive listening systems
-	icon"></i>		
+					icon"></i>		
 					Audition
 				</a>
 			</div>
