--- a/service.html
+++ b/service.html
@@ -46,6 +46,7 @@
 		</div>
 		<div class="row"></div>
 		<div class="row"></div>
+		<div class="row"></div>
 		<div class="one centered purple column row">
 			<a href="#top"><i class="large arrow circle up inverted icon"></i></a>
 			<div class="ui center aligned inverted medium header"> Rejoignez-nous sur</div>
